# agon-lite-v

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_olimex_p4pc.sh  build_p4.sh  build_s3.sh  flash_data.sh  mk_sd_dist.sh  oc.sh  partitions.csv  run.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.olimex-p4pc  sdkconfig.defaults.waveshare-p4wifi  wl_wrap.py
.beads/: issues.jsonl  metadata.json
.cache/clangd/index/: main.c.F755A194ABDB4B56.idx  mos_api.c.E1063CBCE61ECA35.idx  mos_api.h.E873D9FF154CAD4C.idx  mos_api_table.h.7B14B15DE6768522.idx  mos_editor.c.53A034E893607B89.idx  mos_editor.h.A2B862C3B9E11108.idx  mos_file.c.BDF9C055A0C1C0CB.idx  mos_file.h.A0BF37EA0B8741BD.idx  mos_fs.c.DB09F0D95DF6F931.idx  mos_fs.h.B3F7FC6E40FEE001.idx  mos_hal.c.4605102B4EE95003.idx  mos_hal.h.ADCD69E8ECF8A0D9.idx  mos_shell.c.D9B49F7767A6439D.idx  mos_shell.h.7C671D754092EDF1.idx  mos_sntp.c.CE40D103B83C6629.idx  mos_sntp.h.859DFC191ACB0344.idx  mos_strings.c.3FA400C3E8362EC0.idx  mos_strings.h.DF96C8F27438602D.idx  mos_sysvars.c.AD4BDF02D975AB19.idx  mos_sysvars.h.25DBB69467DD208A.idx  mos_types.h.0F0DF04ADB057BCF.idx  mos_vdp.c.463D93B418AB1002.idx  mos_vdp.h.198FD161EB5B6A30.idx  mos_version.h.AD952FDADB7DD0C7.idx  mos_wifi.c.A5537DD27D70E7DB.idx  mos_wifi.h.C45D7D0B3C2E77B8.idx  wifi_credentials.h.69424444C4886889.idx
components/esp_lcd_lt8912b/: CMakeLists.txt  Kconfig  esp_lcd_lt8912b.c  esp_lcd_lt8912b_eotp.c
components/esp_lcd_lt8912b/include/: esp_lcd_lt8912b.h
components/mos_api/: CMakeLists.txt  mos_api.c  mos_api.lf
components/mos_api/include/: mos_api.h  mos_api_table.h  mos_sysvars_block.h
components/mos_audio/: CMakeLists.txt  Kconfig  es8311_local.c  es8311_local.h  mos_audio.c
components/mos_audio/include/: mos_audio.h
components/mos_editor/: CMakeLists.txt  mos_editor.c
components/mos_editor/include/: mos_editor.h
components/mos_file/: CMakeLists.txt  mos_file.c
components/mos_file/include/: mos_file.h
components/mos_fs/: CMakeLists.txt  mos_fs.c
components/mos_fs/include/: mos_fs.h
components/mos_ftp/: CMakeLists.txt  mos_ftp.c
components/mos_ftp/include/: mos_ftp.h
components/mos_hal/: CMakeLists.txt  mos_hal.c
components/mos_hal/include/: mos_hal.h  mos_types.h  mos_version.h
components/mos_i2c/: CMakeLists.txt  mos_i2c.c
components/mos_i2c/include/: mos_i2c.h
components/mos_kbd/: CMakeLists.txt  Kconfig  mos_kbd.c
components/mos_kbd/include/: mos_kbd.h
components/mos_loader/: CMakeLists.txt  mos_loader.c
components/mos_loader/include/: mos_loader.h
components/mos_net/: CMakeLists.txt  Kconfig  mos_net.c
components/mos_net/include/: mos_net.h
components/mos_shell/: CMakeLists.txt  mos_shell.c
components/mos_shell/include/: mos_shell.h
components/mos_sntp/: CMakeLists.txt  mos_sntp.c
components/mos_sntp/include/: mos_sntp.h
components/mos_strings/: CMakeLists.txt  mos_strings.c
components/mos_strings/include/: mos_strings.h
components/mos_sysvars/: CMakeLists.txt  mos_sysvars.c
components/mos_sysvars/include/: mos_sysvars.h
components/mos_uart/: CMakeLists.txt  mos_uart.c
components/mos_uart/include/: mos_uart.h
components/mos_vdp/: CMakeLists.txt  mos_vdp.c
components/mos_vdp/include/: mos_vdp.h
components/mos_vdp_internal/: CMakeLists.txt  Kconfig  mos_audio_synth.c  mos_audio_synth.h  mos_vdp_internal.cpp  mos_vdp_ttxt.c  mos_vdp_ttxt.h  vdp_font.c  vdp_font.h  vdp_ttxt_font.h
components/mos_vdp_internal/include/: mos_vdp_internal.h
components/mos_vdp_router/: CMakeLists.txt  mos_vdp_router.c
components/mos_vdp_router/include/: mos_vdp_router.h
components/mos_wifi/: CMakeLists.txt  Kconfig  mos_wifi.c
components/mos_wifi/include/: mos_wifi.h  wifi_credentials.h
components/usb/: CMakeLists.txt  enum.c  hcd_dwc.c  hcd_split_ext.h  hub.c  usbh.c
data/: autoexec.bat  olimex-p4pc
data/common/: LINEDEMO.BAS  SKI.BAS  autoexec.bat  tz.cfg  wifi.cfg
data/common/tests/: assembler_stub.bbc  benchm1.bbc  benchm2.bbc  benchm3.bbc  benchm4.bbc  benchm5.bbc  benchm6.bbc  benchm7.bbc  benchm8.bbc  benchm9.bbc  circle_1.bbc  circle_2.bbc  cube.bbc  fireworks.bbc  gpio_port_1.bbc  hatgraph.bbc  keyboard_1.bbc  keyboard_3.bbc  life.bbc  lines.bbc  mandlebrot_1.bbc  mode_test_1.bbc  mode_test_2.bbc  palette_1.bbc  rtc.bbc  scroll_1.bbc  scroll_2.bbc  shadows.bbc  sound_1.bbc  sprites_1.bbc  sprites_2.bbc  sprites_3.bbc  sprites_4.bbc  sprites_5.bbc  sysvars.bbc  triangles.bbc  udg.bbc  vdu_23_16.bbc  viewport.bbc
docs/: olimex-esp32-p4-pc-hardware.md
main/: CMakeLists.txt  idf_component.yml  main.c
sdk/: Makefile  README.md  amazinggrace.c  hatgraph.c  helloworld.c  i2c_scan  i2c_scan.c  mos_user.ld  mos_vector.S  sprites.c
